修改dubbo配置文件

--- a/dubbo-simple/dubbo-monitor-simple/src/main/assembly/conf/dubbo.properties
+++ b/dubbo-simple/dubbo-monitor-simple/src/main/assembly/conf/dubbo.properties
@@ -25,5 +25,10 @@ dubbo.jetty.port=8080
 dubbo.jetty.directory=monitor
 dubbo.charts.directory=charts
 dubbo.statistics.directory=monitor/statistics
+
+#dubbo.jetty.directory=${user.home}/monitor
+#dubbo.charts.directory=${dubbo.jetty.directory}/charts
+#dubbo.statistics.directory=${user.home}/monitor/statistics
+
 dubbo.log4j.file=logs/dubbo-monitor-simple.log
 dubbo.log4j.level=WARN
